# ai-redteam-recursive-self-improvement

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  maintenance_task.md
.github/workflows/: tests.yml
examples/: minimal_decision_record.json  minimal_round.json  minimal_round.py
rsi_framework/: __init__.py  cli.py  gate.py  ledger.py  protocol.py  serialization.py
schemas/: round_input.schema.json
tests/: test_cli.py  test_gate.py  test_ledger.py
