[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-redteam-recursive-self-improvement"
version = "0.1.0"
description = "Domain-neutral AI red-team framework for recursive self-improvement governance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "lihouwenbin" }
]
keywords = [
  "ai-safety",
  "red-team",
  "agentic-ai",
  "evaluation",
  "recursive-self-improvement",
  "governance"
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]

[project.urls]
Homepage = "https://github.com/lihouwenbin/ai-redteam-recursive-self-improvement"
Repository = "https://github.com/lihouwenbin/ai-redteam-recursive-self-improvement"
Issues = "https://github.com/lihouwenbin/ai-redteam-recursive-self-improvement/issues"

[tool.setuptools.packages.find]
include = ["rsi_framework*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
